--- a/garmax/app/views/layouts/application.html.erb
+++ b/garmax/app/views/layouts/application.html.erb
@@ -10,10 +10,14 @@
 </head>
 
 <body>
+<%= render 'layouts/header' %>
+
 <% flash.each do |message_type, message| %>
   <div class="alert alert-<%= message_type %>"><%= message %></div>
 <% end %>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
