--- a/garmax/app/views/articles/index.html.erb
+++ b/garmax/app/views/articles/index.html.erb
@@ -1,2 +1,13 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Artykuły</h1>
+
+
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <% @articles.each do |article| %>
+      <div class="border">
+        <%= link_to "Czytaj", articles_show_url(article.id), class: 'btn btn-primary pull-right' %>
+        <h3><%= article.title %></h3>
+      </div>
+    <% end %>
+  </div>
+</div>
