--- a/garmax/app/views/articles/show.html.erb
+++ b/garmax/app/views/articles/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Articles#show</h1>
-<p>Find me in app/views/articles/show.html.erb</p>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <h1><%= @article.title %></h1>
+    <%= @article.content.html_safe %>
+  </div>
+</div>
