--- a/garmax/app/assets/stylesheets/application.css
+++ b/garmax/app/assets/stylesheets/application.css
@@ -28,3 +28,10 @@
 h1 {
     color: #337ab7;
 }
+
+h2 {
+    color: #337ab7;
+    font-size: 22px;
+    text-transform: uppercase;
+    text-align: left;
+}
