--- a/garmax/app/assets/stylesheets/application.css
+++ b/garmax/app/assets/stylesheets/application.css
@@ -25,6 +25,15 @@
     border-radius: 15px;
 }
 
+.border-grey {
+    border-style: solid;
+    border-width: thin;
+    border-color: #BBBBBB;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 15px;
+}
+
 h1 {
     color: #337ab7;
 }
