--- a/garmax/app/views/articles/show.html.erb
+++ b/garmax/app/views/articles/show.html.erb
@@ -1,5 +1,8 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
+    <% if @visited.present? %>
+      <h5 class="pull-right">Artykuł przeczytany</h5>
+    <% end %>
     <h1><%= @article.title %></h1>
     <%= @article.content.html_safe %>
   </div>
